--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -397,13 +397,14 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs:
+      - build
       - build-freebsd
-      - test-macOS-windows-binding
-      - test-linux-x64-gnu-binding
-      - test-linux-x64-musl-binding
-      - test-linux-aarch64-gnu-binding
-      - test-linux-aarch64-musl-binding
-      - test-linux-arm-gnueabihf-binding
+      # - test-macOS-windows-binding
+      # - test-linux-x64-gnu-binding
+      # - test-linux-x64-musl-binding
+      # - test-linux-aarch64-gnu-binding
+      # - test-linux-aarch64-musl-binding
+      # - test-linux-arm-gnueabihf-binding
     steps:
       - uses: actions/checkout@v4
       - name: Setup node
